[tool.poetry]
name = "picktoss-llm-worker"
version = "0.1.0"
description = ""
authors = ["Earthquakoo <cream5343@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2024.1"
openai = "^1.23.6"
requests = "^2.31.0"
pymysql = "^1.1.0"
fastapi = "^0.110.2"
boto3 = "1.34.64"
langchain = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
